tests/NormalTests/paczka1/fuzzy1/55139467.err
Error in line 12: oOvynBZOT A88 71,1
Error in line 14: oOvynBZOT A889 136,5
Error in line 7: sNl A337 108,3
Error in line 22: EOK5N A889 88,8
